--- a/source/_posts/如何通过开一个烤猪蹄店，迎娶白富美，走上人生巅峰.md
+++ b/source/_posts/如何通过开一个烤猪蹄店，迎娶白富美，走上人生巅峰.md
@@ -1,215 +1,217 @@
 ---
-title: 如何通过开一个烤猪蹄店，迎娶白富美，走上人生巅峰
+title: How to marry a rich woman and walk on the peak of life by opening a roast pig's feet store
 date: 2023-07-24 09:16:00
 categories:
-  - 自我提升
-tags:
-  - 烤猪蹄
-  - 人生巅峰
-  - 轻资产创业
-  - 卤水配方
-  - 大学城
-  - 量化交易
-  - 利润点
-description: '如果你做量化交易实在做不下去，不如看看这篇文章,虽然无法闲云野鹤，但也可以自己说了算，除了辛苦一点，没有别的毛病。顺便还可以解解馋虫'
+  - Self-improvement
+tags: 
+  - pig trotters
+  - Life on the Top
+  - Light Asset Entrepreneurship
+  - Marinade Recipe
+  - University City
+  - Quantitative trading
+  - Profit Points
+description: If you do quantitative trading really can not do it, why not look at this article, although it can not be idle wild crane, but also can be said, in addition to a little bit of hard work, there is no other problem. In addition to a little hard work, there is no other problem. By the way, you can also quench your thirst for worms.
 cover: https://s2.loli.net/2023/07/24/UPIjgd3vb8GYDXM.webp
 ---
 
-## 卤制过程
+## Brining process
 
-### 预处理
+### Pre-treatment
 
-采购规格 七寸（330一件20斤）要求新鲜猪蹄,
+Purchase specification: 7 inches (330 pieces of 20 catties) Fresh pig's trotters are required.
 
-要求供应商先将猪蹄对半砍断,带回后先在清水中浸泡化冻。
+The supplier is required to cut the pig's feet in half, bring them back and soak them in water to thaw them first.
 
-然后用火枪烧去表皮上的猪毛和腥味。将烧过的猪蹄放入锅内加水煮沸,以去除腥味和血水,适量加入生姜和白酒调味。
+Then burn the pig's hair on the skin with a torch to remove the fishy odor. Put the burnt pig's feet into a pot and boil with water to remove the fishy smell and blood, add ginger and white wine to taste.
 
-沸后用勺子将水面上的浮渣撇去。煮熟的猪蹄捞出,放入冷水中冷却。用干净的钢丝球仔细擦洗表面烧焦的猪皮,反复洗涤两遍,确保无钢丝球残留。 其他猪肉食材的预处理也采取同样的步骤。
+After boiling, use a spoon to skim off the scum on the surface of the water. Fish out the cooked pig's feet and put them into cold water to cool down. Scrub the burnt skin carefully with a clean steel wool ball and repeat the scrubbing twice to make sure no steel wool remains. Take the same steps for other pork ingredients.
 
-### 卤水配方 发财就靠它了！
+### Marinade Recipe: Get rich on it!
 
-> 冰糖一斤 鸡骨架十斤 猪骨十斤 香叶20g 桂皮40g 甘草30g 白芷30g 黄栀子8颗 良姜40g 水五十斤 麦芽糖六瓶 草果20g 八角50g 
-> 小茴香30g 白扣20g 花椒50克  干辣椒抓三下 千里香30g 丁香10g 橙皮20g
+> One catty of rock sugar Ten catty of chicken bones Ten catty of pork bones 20g of coriander 20g of cinnamon 40g of licorice 30g of Angelica dahurica 30g of yellow gardenia 8 pcs of good ginger 40g of water Fifty catty of maltose Six bottles of strawberry 20g of star anise 50g of water 
+> Cumin 30g white buckle 20g peppercorns 50g dried chili pepper scratch three thousand spices 30g cloves 10g orange peel 20g
 
-### 第一次卤料处理
+### First marinade processing
 
-1. 将猪骨和鸡骨焯水后,放入卤水桶,加入足量清水大火烧开,然后转小火熬煮2个多小时,直到骨头软烂成渣状。 
-2. 另外准备一勺水和半斤冰糖,放入锅中大火烧开,然后一直顺时针搅拌,等水分收干后,改小火慢慢熬制,过程中不停搅动,不能让火太大或者烧焦。等颜色由白变红再深一度时,再加入一勺水,待糖色熬制好后备用。
-3. 高汤熬好后,将准备好的糖色和所有香料倒入高汤中,首次无需打包香料,直接散装下锅。然后加入麦芽糖,调味用盐250克、鸡精200克、味精100克、冰糖一斤,小火煮1个小时。
-4. 1小时后用漏勺将香料捞出丢弃,加入猪蹄,可添加生姜(但不能加葱姜香菜,否则会酸)。再按原量加入一遍香料,这次可以打包,小火煮猪蹄40分钟,然后关火泡40分钟,用筷子戳透猪蹄即可,如果还不软就多泡10-15分钟。
+1. blanch pork bones and chicken bones, put them into the brine bucket, add enough water to boil over high heat, then turn to low heat and simmer for more than 2 hours, until the bones are soft and rotten into crumbs. 
+2. In addition to prepare a spoonful of water and half a catty of rock sugar, into the pot on high heat to boil, and then has been clockwise stirring, and so the water to dry, change the small fire slowly simmering, the process of constantly stirring, can not let the fire is too big or burnt. And so the color from white to red and then deep once, and then add a spoonful of water, to be ready to use after the sugar color simmering.
+3. Once the stock is simmering, pour the prepared sugar color and all the spices into the stock, for the first time there is no need to pack the spices, so they will go directly into the pot in bulk. Then add maltose, seasoned with 250 grams of salt, 200 grams of chicken essence, 100 grams of monosodium glutamate, a catty of rock sugar, cook on a low flame for 1 hour.
+4. 1 hour with a slotted spoon will be spices fished out and discarded, add pig's feet, you can add ginger (but can not add green onions and ginger cilantro, otherwise it will be sour). Then add the original amount of spices once again, this time you can pack, small fire to cook pig's feet for 40 minutes, and then turn off the fire soak for 40 minutes, use chopsticks to poke through the pig's feet can be, if it is not yet soft soak for 10-15 minutes more.
 
-### 注意事项
+### Note
 
-1. 如果卤水味道不够,可以适量添加盐和鸡精,第一次熬制颜色不够深是正常的,不要添加太多老抽或者生抽。
-2. 每次卤制只需要加入适量的盐、鸡精、味精、冰糖和香料包,大约2天半后再换一次。
-3. 夏天天热的时候下班后要把卤水烧开,防止第二天卤水变酸
-4. 每次卤制完后用密漏将卤水中的杂质捞出来丢弃,不然长时间会糊底。
+1, if the brine flavor is not enough, you can add salt and chicken essence, the first simmering color is not dark enough is normal, do not add too much dark soy sauce or soy sauce.
+2. each time you brine only need to add the right amount of salt, chicken essence, monosodium glutamate, rock sugar and spice packets, about 2 days and a half and then change once.
+3. in the summer when it is hot to boil the brine after work, to prevent the brine the next day to become acidic
+4. After each brine with a closed leak will be brine out of impurities discarded, otherwise a long time will be paste bottom.
 
-### 熬制卤水
+### Simmering brine
 
 ![](https://s2.loli.net/2023/07/24/uIZl8R6EmDzvA53.webp)
 
-### 第一次卤的猪蹄
+### First marinated pig's feet
 
 ![](https://s2.loli.net/2023/07/24/nT6LoJGV1IEkqUC.webp)
 
-### 以后老卤卤制的猪蹄
+### Pork trotters brined in old marinade
 
 ![](https://s2.loli.net/2023/07/24/uC5DMHw63pUJXn1.webp)
 
-## 如何开实体店
+## How to open a brick-and-mortar store ##
 
-### 选址
+### Choosing a location ###
 
-#### 为什么一定要选择大学附近的店铺
+#### Why should you choose a store near a university?
 
-1.  不一定非要做学生生意,但产品价格最好控制在人均30元以内。我的产品定价约在26元左右,我没做过超过人均30元的市场。如果你所在城市外卖人均消费在35元左右,这样也可以做。
-2.  许多外卖店亏损的原因在于配送费这一块被平台吃掉了。如果算上配送费,你的人均价就会超过30元。客单价越高,订单量就越少,营业额也跟着下降。做外卖要细致计算成本,既要有利润,也要顾客感觉不贵。 
-3. 在小区和办公场所做外卖需要自配送骑手。骑手起步价大约在4.5元。如果我的产品配送费超过3元,利润基本会掉掉10%左右。
-4. 如果找大学生聚集的地方,最好是有专门服务校园内的自配送骑手,而不是平台骑手。他们的配送费约在2元左右就足够。这样每单可以省3元,100单就多赚300元。一个月下来可多赚近1万,区别很大。
+1. You don't have to be a student, but the price of your products should be within 30 RMB per person. My products are priced at about 26 yuan, and I have never done more than 30 yuan per capita in the market. If you are in the city takeaway per capita consumption of about 35 yuan, this can also be done. 2.
+2. Many takeaway stores lose money because the delivery fee is eaten by the platform. If you count the delivery fee, your per capita price will be more than 30 yuan. The higher the unit price, the fewer orders, the turnover also followed the decline. Do takeaway to carefully calculate the cost, both to have a profit, but also to customers do not feel expensive. 3. 
+3. Doing takeout in neighborhoods and office space requires self-delivery riders. The starting price of the rider is about 4.5 yuan. If my product delivery fee is more than 3 yuan, the profit will basically drop about 10%. 4.
+4. If you are looking for a place where college students gather, it is best to have self-delivery riders who specialize in serving the campus, rather than platform riders. Their delivery fee of about 2 yuan or so is enough. This can save 3 yuan per single, 100 single will earn 300 yuan more. That's an extra $10,000 a month, which makes a big difference.
 
-#### 店铺要求
+#### Store Requirements
 
-1.  租金控制在5000元左右为佳(最好3000-4000元),能签3年以内的合同,房租涨幅不超过15%,押金不超过3万(一般是押3个月付3个月)。
-2. 店面面积15-30平方米即可,要有门牌号可办理营业执照和卫生许可证。
-3. 店铺要能安装排烟管道和三相电。门面以宽不深为佳。
-4. 要能做外卖生意,且学生可以点餐进小区。这一点需要询问清楚,许多小区不允许外卖进入。
-5. 大学生总人数需要超过3万人,万不得已不应少于2万人。这是我统计出的最准确数据。
-6. 周边5公里范围内要有15个以上的小区。
+1. Rent control in the 5,000 yuan (preferably 3,000-4,000 yuan), can be signed within 3 years of the contract, the rent increase does not exceed 15%, the deposit does not exceed 30,000 (usually 3 months to pay 3 months).
+2. the store area of 15-30 square meters can be, to have a door number can apply for a business license and health permit. 3. the shop should be able to install a smoke exhaust system.
+3. The store should be able to install a smoke exhaust pipe and three-phase electricity. The frontage should be wide but not deep. 4.
+4. The shop should be able to do take-out business and students should be able to order food into the neighborhood. You need to ask about this, as many neighborhoods do not allow take-outs.
+5. The total number of university students should be more than 30,000, but not less than 20,000 as a last resort. This is the most accurate figure I can come up with.
+6. There should be more than 15 neighborhoods within a 5km radius.
 
-#### 小结 
+#### Summary 
 
-租金越低,我们的生存概率就越高,省下的租金直接转化为净利润。
+The lower the rent, the higher the probability of our survival, and the savings in rent will directly translate into net profit.
 
-计划总跟不上变化,合同押金和租期我们尽量签短一些,但也不能太短,以免生意做起来后,房东要求搬离也很头疼。
+Plans always fail to keep up with changes, the contract deposit and lease period we try to sign a shorter, but not too short, so as not to do business, the landlord asked to move out of the headache.
 
-**2年是比较合适的期限。**
+**2 years is a more appropriate period. **
 
-店面可以不大,但要够宽敞。需要有展示柜摆放商品,250-400厘米之间是最佳尺寸。我的展示柜有400厘米,还能摆放几张餐桌。
+The store can be small, but it should be spacious enough. You need to have a display case for your products, and 250-400cm is the best size. My display case is 400 centimeters, and I can put a couple of dining tables in it.
 
 ![](https://s2.loli.net/2023/07/24/nWbdrTaBy836OXV.webp)
 
-必须要有门牌号,许多学生街是临时搭建的铁皮房,不管是不是铁皮房,我们都要确保有门牌号,这样才能做堂食外带的生意。
+Must have a license plate number, many student street is a temporary building of the tin room, whether or not it is a tin room, we have to make sure that there is a license plate number, so that we can do dine-in takeaway business.
 
-外卖是不可或缺的,现在流感频发,许多家长不让孩子到处跑,依赖学生人流难以像以前那样做生意,所以关键在于能够将商品外送到校内。
+Take-out is indispensable, now the flu is frequent, many parents do not allow their children to run around, relying on student traffic is difficult to do business as before, so the key is to be able to deliver goods to the school.
 
-大学生人数也很关键,如果只有一个1万多人的大学,业务量做起来会很困难。但即便这样,你自己管理店面也会比打工强。
+The number of college students is also critical, and if there is only one university with more than 10,000 students, it will be difficult to do business. Even so, it's better to manage your own store than to work part-time.
 
-按我的模式,你不会亏损。不能因为是学生街就只盯着学生生意,周边居民也会逛街,你选址时也要注意街上中年人群数量,以及对周边小区进行调研。
+With my model, you won't lose money. Not because it is a student street just focus on student business, the surrounding residents will also be shopping, you also need to pay attention to the number of middle-aged people on the street when you choose the location, as well as research on the surrounding neighborhoods.
 
-既能做**校内外卖,也能外送小区**,这种情况最理想。
+Both can do ** on-campus takeout, can also be delivered to the neighborhood **, this situation is ideal.
 
-**房租的投资应该控制在1万8–3万**
+** The investment in rent should be controlled at 18,000-3,000 **.
 
-### 水电装修
+### Plumbing and electrical renovation
 
-1. 水电和地板施工不能马虎,水表要检查在没出水情况下是否会误计费,如果会就要及时找房东换表或重新铺设管道。
-2. 电表要换成三相电六平方的,做外卖用电功率大,防止跳闸。
-3. 地板需要铺设瓷砖,利于卫生处理,质量不需太好,普通杂色砖就可以。
-4. 墙面可以在淘宝购买些墙贴画贴上,让店面看起来干净整洁。
-5. 最好用白色调的,灯光照射效果自然。灯光只要在柜台商品区安装射灯,让商品在灯光下更诱人。大厅和厨房普通筒灯就可以。
-6. 加起来水电、瓷砖、灯具,我30平方米的店面花费不到1万元。(油烟机也可以包工包料安装)。
+1. plumbing and flooring construction can not be sloppy, the water meter should be checked in the case of no water will be billed in error, if it will be in a timely manner to find the landlord to change the meter or resurface the pipeline. 2.
+2, the power meter should be replaced with a three-phase electricity six square, do takeout power to prevent tripping. 3, the floor needs to be tiled.
+3. the floor needs to be paved tiles, conducive to sanitation, the quality does not need too good, ordinary miscellaneous color tiles can be. 4. the wall can be purchased on Taobao.
+4. Walls can be purchased in Taobao some wall stickers on the store looks clean and tidy. 5.
+5. The best white color, the lighting effect is natural. Lighting as long as the counter merchandise area to install spotlights, so that the goods in the light more attractive. Hall and kitchen ordinary downlights can be.
+6. Add up the utilities, tiles, lamps and lanterns, my 30 square meters of store cost less than 10,000 yuan. (The hood can also be installed by contractors).
 
-### 设备
+### Equipment
 
-#### 烤炉
+#### Oven
 
-烤炉（烤鸭炉）最好的尺寸再135*60。价格在550左右。
+The best size for a duck oven is 135*60, and the price is around 550.
 
 <img src="https://s2.loli.net/2023/07/24/Iml4c9QJFNsXCOt.webp" style="zoom:50%;" />
 
-#### 微波炉（格兰士）两台800左右
+#### Two microwave ovens (Grants) around 800
 
 <img src="https://s2.loli.net/2023/07/24/slkzqHubVWn1iaB.webp" style="zoom:50%;" />
 
-#### 其他设备
+#### Other equipment
 
-1. 商用冷藏工作台,购买一台二手商用冰箱,价格约800元左右,二手的只要500元左右。
-2. 立体保鲜柜也有二手的,价格在500元上下。
-3. 不锈钢柜台包工包料要在2000元左右。
-4. 卤水桶和灶台根据尺寸大小,价格在1000元左右,我的都是最大号的。 
-5. 招牌广告,做灯箱字约2000元,做普通灯箱也在1000元左右。
-6. 锅碗瓢盆、调料材料等加起来预算3000元左右。
+1. commercial refrigerated workbench, buy a used commercial refrigerator, the price is about 800 yuan, used as long as about 500 yuan.
+2. cubic freshness cabinet also have used, the price is 500 yuan.
+3. Stainless steel counter is about 2,000 RMB. 4.
+4. brine bucket and stove according to the size of the price of about 1000 yuan, my are the largest. 5. signboard advertising, do not have to pay for the work. 
+5. signboard advertising, do light box word about 2000 yuan, do ordinary light box is also about 1000 yuan. 6. pots and pans, adjusting the price of the food, the price of the food is also about 1000 yuan.
+6. Pots and pans, spices and other materials, etc., add up to a budget of about 3,000 yuan.
 
-#### 招牌
+#### Signboards
 
-最好制作两个招牌,一个在上一个在下。上面的是灯箱招牌,设计自己的店名,我的店名就叫“黄金烤猪蹄”。你也可以自己取一个与主打产品相关的店名,当前阶段不必考虑商标注册这些,能先活下去最重要。
+It is best to make two signs, one on top and one on the bottom. The top one is a light box sign, and you can design your own name, my name is "Golden Roasted Pork Trotters". You can also take a store name related to the main products, the current stage do not have to consider trademark registration, can first live the most important.
 
-像我这样可以再加一个猪头图案。 下面的是按柜台尺寸制作的灯箱,可以印上产品和价格。这样行人一眼就能看到信息。我觉得红底黄字效果最好,也试过其他颜色但不太理想。
+Like me, you can add a pig's head pattern. Below is a light box made according to the size of the counter, you can print the products and prices. So that pedestrians can see the information at a glance. I think the red background with yellow characters is the best, but also tried other colors but not ideal.
 
 ![](https://s2.loli.net/2023/07/24/F4lx9w7WUSGcmpb.webp)
 
-#### 小结
 
-**装修、设备、广告、物料费用再2万。**
 
-**大概一家店的投资按我的标准话是再五万左右。**
+#### Summary
 
-这五万里面是包括了房租和房租押金。真正投资的钱是在三个月的房租和前期的物料三万左右。剩下的钱只是押金。不做可以转让或者到期退还。
+**Another $20,000 for renovations, equipment, advertising, and materials. **
 
-### 营业执照和许可证
+**Approximately the investment for a store is another 50,000 by my standards. **
 
-办理营业执照需要带上你的身份证、门店租赁合同,再拍一张门牌号照片,去工商局填写资料,当天下午就可以拿到营业执照。
+This 50,000 includes rent and rent deposit. The real investment money is in the three months of rent and pre-materials about 30,000 yuan. The rest of the money is just a deposit. If you don't want to do it, you can transfer it or return it when it's due.
 
-卫生许可证也可以在工商局一起办理,只需询问具体申请流程并按要求准备材料即可。
+### Business license and permit
 
-## 如何开线上店
+To apply for a business license, you need to bring your ID card, store rental contract, and then take a photo of the door number, go to the Industrial and Commercial Bureau to fill out the information, and you can get a business license in the afternoon.
 
-### 前期准备
+Health license can also be applied for in the Industrial and Commercial Bureau together, just ask the specific application process and prepare materials according to the requirements can be.
 
-店铺准备工作差不多完成时,可以联系当地外卖平台的区域经理。周边商家都能提供联系方式,一个要联系美团,一个联系饿了么,先讨论好上线事宜,让他们安排时间帮你完成操作。操作流程不复杂,基本3天就能完成。
+## How to open an online store
 
-剩下的是开店流程,就是新手任务,按App提示逐步完成。较繁琐的是商品上架、满减设置、区域划分等,需要花点时间。
+### Preparation
 
-不同区域要适当加上配送费。不过我这里都有现成的操作流程,你按步骤操作后稍微修改一下就可以使用了。需要的可以私信我,我可以免费提供整套操作模块给你。
+When you are almost done with the preparation of your store, you can contact the regional manager of your local takeaway platform. Neighboring merchants can provide contact information, one to contact Meituan, one to contact Hungry's, to discuss the online matters, so that they can arrange time to help you complete the operation. The operation process is not complicated, the basic 3 days can be completed.
 
-### 注意事项
+The rest is to open the store process, is a novice task, according to the App prompts gradually complete. More cumbersome is the goods on the shelves, full reduction settings, regional division, etc., need to spend some time.
 
-1. 外卖平台操作全部完成后,可以请朋友帮忙下几单外卖,下单成功后把钱退给对方,过几个小时让他们记得给你好评,最好是带图片和文字的评价。行业里称之为“刷好评”,5条就够了。因为作为新店,没有流量和评价,一切从零开始,你的店会被平台默认排序靠后,用户点开外卖时看到你的概率很低。他们看重的主要是好评、销量、活动力度等。不过没关系,我们一步步来,先把前期准备做足。
-2. 新开外卖店,平台会提供一个“新店特权”,就是给你7天流量曝光扶持,效果还是很不错的。这个特权一个月内都有效,我们一定要合理安排,至少要基本上手后再使用,只要在一个月内,可以根据实际分次启用这个特权。一般周末外卖单较多,可以提前一天在平台设置,隔天就能生效。要提前备好货物,保证产品质量。筷子、手套等都不能少。出餐速度控制在15分钟内,尽量给顾客一个良好的首次体验,别一开始就被差评。这对你影响还是很大的。
-3. 开店后会接到很多自称外卖运营的电话,说能帮你拉单量。这些一概不要相信,通常是割韭菜。也不要在平台上充值买流量,一旦充值,平台会默认你会一直充钱,如果停止就会拉低你的店铺。自己的事要靠自己慢慢做,不懂的可以多请教有经验的老板,他们很热心地为你解答问题,你也可以问我。要相信空白期总会过去的。
+Different regions should be added to the appropriate delivery fee. However, I have a ready-made operation process here, you operate according to the steps after a slight modification can be used. If you need to private message me, I can provide a complete set of operating modules to you for free.
 
-### 利润点分析
+#### Note:
 
-大家应该能看出,我一直在讲述的是开一个小吃店的项目,招牌产品是特色烤猪蹄,然后配几个附带产品就可以了。一个人完全可以操作,不管有没有做过,一个月内绝对可以上手。
+1. takeaway platform operation is completed, you can ask friends to help under a few orders of takeaway, under a single successful money back to the other side, after a few hours so that they remember to give you good reviews, preferably with pictures and text evaluation. The industry called "brush praise", 5 will be enough. Because as a new store, no traffic and evaluation, everything from scratch, your store will be the default platform sorting back, the probability of users clicking on the takeaway to see you is very low. They value mainly good reviews, sales, activity strength. But it's okay, we step by step, first of all, the pre-preparation to do enough. 2.
+2. new sellers, the platform will provide a "new store privileges", is to give you 7 days of traffic exposure support, the effect is still very good. This privilege is valid for a month, we must rationalize, at least to basically hand after the use, as long as in a month, according to the actual times to enable this privilege. The general weekend takeaway single more, can be set up a day in advance in the platform, the next day will be able to take effect. To prepare the goods in advance, to ensure product quality. Chopsticks, gloves and so on can not be missing. The speed of food control in 15 minutes, try to give customers a good first experience, do not start to be bad reviews. This is still a big impact on you.
+3. After the store will receive a lot of self-proclaimed takeaway operation phone, said you can help you pull single volume. These do not believe, usually cut leeks. Do not recharge on the platform to buy traffic, once recharged, the platform will default you will always be recharged, if you stop will pull down your store. Their own things to rely on their own slowly, do not understand can ask more experienced boss, they are very enthusiastic for you to answer questions, you can also ask me. You can also ask me. You should believe that the blank period will always pass.
 
-#### 特色烤猪蹄：
+### Profit point analysis
 
-1. 采用700g以上的冻七寸，进货价在10-10.5半只，利润在40%
-2. 定价：半只18，一只32
+You should be able to see, I have been talking about is to open a snack bar project, the signature product is the characteristics of roasted pig's feet, and then with a few incidental products can be. A person can operate completely, no matter whether or not you have ever done, within a month can absolutely get started.
 
-#### 五香烧鸡：
+#### Special roasted pig's feet:
 
-1. 一斤二两左右的三黄鸡，进货在10-10.5一只，利润在50%
-2. 定价：一只20，半只12
+1. using more than 700g of frozen seven inches, the purchase price of 10-10.5 half, the profit is 40%. 2. pricing: 18% for half a pig's foot.
+2. Pricing: 18 for half, 32 for one.
 
-#### 香酥五花肉：
+#### Five Spice Roasted Chicken:
 
-1. 腌好的五花肉320g，进货在7一斤。卖16一份，利润在120%
-2. 因为猪肉价格近期比较便宜， 这个利润率并不能长期保持，还要注意
+1. one catty two taels of three yellow chicken, purchase at 10-10.5 a, profit at 50%
+2. Pricing: one 20, half 12
 
-#### 蹄花汤：
+#### Crispy Pork:
 
-采用一样的七寸，卖18一份，利润40%
+1. 320g of marinated pork, stocked at 7 a catty. If you sell 16, the profit is 120%.
+2. because of the recent price of pork is relatively cheap, this profit margin can not be maintained for a long time, but also to pay attention to the
 
-#### 东坡肘子：
+#### hoof soup:
 
-猪脚圈，对半开。进价9-10一斤。卖18一份，利润在50%
+Adopt the same seven inches, sell 18 a profit of 40%
 
-#### 碳烤肘子：
+#### Dongpo Elbow:
 
-采用一样的猪脚圈，卖15一份，利润在45%
+Pork feet circle, half open. Inlet price 9-10 a catty. Sell 18 a, profit in 50%
 
-核心的竞争的产品都在这，剩下都可以适当卤点鸡腿和卤肠，卤蛋，配着卖。最好卖的是烤肘子，外卖也是。它肉相比会比猪脚肉多。有肥有瘦，爱吃的很爱吃。
+#### Carbonara Elbow:
 
-### 产品的操作流程
+Using the same ring of pig's feet, sell 15, profit at 45%.
 
-我现在使用的是壁挂式烤炉,之前说过要买烤鸭炉,烤猪蹄的方法原理与烤鸭相同。将设备组装好,下面燃烧炭块(一箱27块的碳就可以),打开下面的风门,让空气流通碳块燃烧旺。温度到150度时,用钩挂上猪蹄放入炉内,盖上盖子。当温度到250度时关闭风门。烤6分钟后取出猪蹄。
+The core competitive products are here, the rest can be appropriate brine some chicken legs and brine sausage, brine eggs, with the sale. The best seller is the roasted elbow, takeout as well. It will have more meat compared to pig's feet. There are fat and lean, love to eat very much.
 
-烤好的猪蹄撒上烧烤粉和辣椒面即可出售。这两样淘宝上都有销售。
+### How to operate the product
 
-五香烧鸡也是烤至表皮金黄就可以了,切开后撒上孜然、椒盐、辣椒面。同样很好卖。
+I'm using a wall-mounted oven, I said before to buy a duck oven, roast pig's feet in the same way as the principle of duck. The equipment is assembled, the following burning charcoal (a box of 27 pieces of carbon can be), open the bottom of the dampers, so that the air flow of carbon burning strong. When the temperature reaches 150 degrees, put the pig's hooves on the hook and put the lid on the oven. Close the damper when the temperature reaches 250 degrees. Remove the pig's feet from the oven after 6 minutes.
+
+Sprinkle the roasted pig's feet with barbecue powder and chili noodles and sell. Both are available on Taobao.
+
+Five spice chicken is also roasted until the skin is golden brown, cut and sprinkled with cumin, pepper, chili powder. Also very good.
 
 <img src="https://s2.loli.net/2023/07/24/DdukVPC5YlXpyjq.webp"  />
 
@@ -217,116 +219,121 @@ cover: https://s2.loli.net/2023/07/24/UPIjgd3vb8GYDXM.webp
 
 ![](https://s2.loli.net/2023/07/24/UPIjgd3vb8GYDXM.webp)
 
-#### 注意事项：
+#### Notes:
 
-1. 控制好火候,温度不要超过250度。烤制时要适当掀开盖子查看。
-2. 高峰期可以提前烤一些备用,但不要做太多。放置时间过长会使肉质变柴。
-3. 将卤好的猪蹄取出放在托盘时要加一些卤汁浸泡,否则要放进显示柜内。这样可以防止猪蹄被风吹干导致肉质柴硬,影响口感。
-4. 孜然和辣椒不要加太多,本身卤制的猪蹄已经有味道,重点是达到香料渗透。
-5. 适当添加碳,别让火焰熄灭。火焰熄灭了需要等待重新点燃烤制,会影响顾客体验
+1. Control the heat, do not exceed 250 degrees. Lift the lid to check properly when baking.
+2. During peak season, you can bake some in advance, but don't make too much. Too much time will cause the meat to turn into firewood. 3.
+3. When you take out the marinated pig's feet and put them on the tray, add some marinade to soak them, otherwise put them in the display cabinet. This will prevent the meat from drying out in the wind and becoming tough, which may affect the texture.
+4. do not add too much cumin and chili, the marinated pig's feet already have flavor, the focus is to achieve spice penetration.
+5. Add carbon as appropriate, do not let the flame go out. If the flame goes out, you need to wait to re-light the grill, which will affect the customer experience.
 
-因为我主要以外带和外送为主,所以各种打包盒和袋子是必需的。
+Because I mainly take-away and delivery-oriented, so a variety of packing boxes and bags are necessary.
 
-打包盒分3种规格,500ml方形盒57元一件,1000ml方形盒78元一件,1000ml圆形盒90元一件,每件包装300个盒子。
+There are 3 sizes of boxes, 500ml square box for 57 RMB, 1000ml square box for 78 RMB and 1000ml round box for 90 RMB, each packing 300 boxes.
 
-500ml用来装烤猪蹄和烧肘子,以及半只烧鸡。1000ml方盒用于一次装2人份。
+The 500ml box is used for roasted pig's trotters, roasted elbows, and half roasted chicken, while the 1000ml square box is used for 2 people at a time.
 
-1000ml圆盒用来装猪蹄汤。
+The 1000ml round box is used for pig trotters soup.
 
-打包袋选25*26cm的透明塑料袋即可,外卖订单可以用这种外卖专用打包袋,淘宝上都有销售,我觉得是最合适的。
+Packing bag choose 25 * 26cm transparent plastic bag can be used, takeaway orders can use this takeaway special packing bag, Taobao have sales, I think it is the most appropriate.
 
-筷子，手套都可以买得到，手套也买独立包装的省事。
+Chopsticks, gloves can be bought, gloves also buy individually packaged to save time.
 
 ![](https://s2.loli.net/2023/07/24/ZHsSqij9Bx2rGAo.webp)
 
-### 外卖平台规划搭建
 
-#### 上产品 
 
-我们主打单品小吃,种类不多,但一个好的产品体系需要达到30个选项以上。
+### Takeaway platform planning and building
 
-那么如何凑齐这么多项目呢?首先,把你目前有的5种产品全部上线;其次,我们可以进行搭配组合,比如猪蹄半只+五香烧鸡半只做成一个小套餐,这样可以变化组合。这也是提升客单价的一种方式。
+#### on products 
 
-我最贵的套餐是一整只烤猪蹄+一整只烤肘子,定价在60元以上。
+We specialize in single product snacks, not many types, but a good product system needs to reach more than 30 options.
+
+So how do you get so many items together? First of all, you currently have all five products on-line; secondly, we can match the combination, such as pig's feet half + five spiced roast chicken half made into a small set meal, so you can change the combination. This is also a way to enhance the unit price.
+
+My most expensive set meal is a whole roasted pig's feet + a whole roasted elbow, priced at more than 60 yuan.
 
 ![](https://s2.loli.net/2023/07/24/b6PwKMIZi7gfohc.webp)
 
-**套餐里也要配主食,可以买个电饭煲蒸些米饭一起卖。外卖和堂食有区别,点外卖的目的很明确是为了吃饱,而店里不一样,烤猪蹄作为一种小吃,更多是作为饭后或者逛街时的零食。一般堂食很少会要求搭配米饭。这一点非常重要**!
+**Set meals should also be accompanied by staple food, you can buy a rice cooker to steam some rice to sell together. There is a difference between takeout and dine-in, the purpose of ordering takeout is very clear in order to eat, while the store is not the same, roasted pig's feet as a snack, more as a snack after dinner or shopping. Generally dine-in will rarely ask for rice. This is very important**!
 
-可以说是业务生存的关键。“小吃变主食,主食里又有小吃”,这是我们的核心经营理念之一。
+Can be said to be the key to business survival. "Snacks into staple food, staple food and snacks," which is one of our core business philosophy.
 
 ![](https://s2.loli.net/2023/07/24/tEMiIGTceHmrlyJ.webp)
 
-仔细分类排列,会让顾客感觉你很专业,种类也看起来非常丰富。完成这一波操作,基本能达到20-30种品类。
+Carefully categorized and arranged, will make customers feel you are very professional, the variety also looks very rich. Completion of this wave of operations, the basic can reach 20-30 kinds of categories.
 
-**我们产品的另一个核心卖点是“馒头”,最好找当地的“河南老面馒头”,可以直接和早餐店合作购买,不需要自己做。也可以找卖早餐的河南人三轮车购买。老面馒头配我们的烤肘子就是店里的招牌组合**
+** Another core selling point of our products is "steamed bread", it is best to find the local "Henan old steamed bread", you can directly cooperate with the breakfast store to buy, do not need to do it yourself. You can also look for the Henan people selling breakfast tricycle to buy. Old-face steamed buns with our roasted elbows is the signature combination of the store***.
 
 ![](https://s2.loli.net/2023/07/24/yDGdefNYc1zLCAQ.webp)
 
-必须花时间找寻馒头的货源,这是必不可少的。许多学生都是冲着这个套餐来的。烤肘子肥瘦参半,非常软烂。烤完后表皮略焦,撒上孜然辣椒面。配上我们的老面馒头,怎能不香?你再准备一些黄瓜蒜蓉等解腻的配菜,成本不高,但立刻提升了整体体验。
+It is essential that you must take the time to find a source for the buns. Many students come for this set menu. The roasted elbows are a mixture of fat and lean, and are very soft. After grilling, the skin is slightly charred and sprinkled with cumin and chili noodles. How can it not smell good when served with our old-fashioned steamed buns? You can also prepare some cucumber garlic and other side dishes to relieve fatigue, the cost is not high, but immediately enhance the overall experience.
 
-#### 初级营销
+#### Primary Marketing
 
-平台有“满减活动”,这要做。满减力度要分阶段,第一阶段满减力度大,第二阶段提升客单价,第三阶段针对大额订单进行优惠。
+The platform has "full reduction activities", which should be done. The first phase of the full reduction should be divided into phases, the first phase of the full reduction, the second phase of the enhancement of the customer unit price, the third phase of the large amount of orders for preferential treatment.
 
 ![](https://s2.loli.net/2023/07/24/itpoD5aOu3LIme2.webp)
 
-这是一种基本的营销活动,也是平台曝光店铺、带来流量的一种形式。可以说外卖的定价会比堂食价格高,是一种虚拟价格,目的是给消费者优惠感。例如,堂食15元的商品,在外卖平台如何定价?
+This is a basic marketing activity, but also a form of platform exposure stores, bring traffic. It can be said that takeaway pricing will be higher than the dine-in price, is a virtual price, the purpose is to give consumers a sense of preference. For example, dine-in 15 yuan of goods, in the takeaway platform how to price?
 
-1. 第一阶段活动可以做满15元减10元的满减。
-2. 要开通美团会员活动,平台出资3元,商家出资4元。
-3. 开展天天神券活动,商家出资5元。 
-4. 配送费由商家承担，平台抽成0.66%
+1. the first phase of the activity can be done full of 15 yuan minus 10 yuan reduction. 2. to open the Meituan membership activities.
+2. to open the Meituan membership activities, the platform funded 3 yuan, merchants funded 4 yuan. 3.
+3. to carry out the daily coupon activities, merchants contribute 5 yuan. 4. 
+4. Distribution costs borne by the merchants, the platform draw 0.66%.
 
-以上三项是平台必须开展的流量活动,资金从何而来?
+The above three is the platform must carry out traffic activities, where does the money come from?
 
-我们作为商家不可能全部出资,但也不能让消费者觉得价格太高。
+We as merchants can not be fully funded, but also can not let consumers feel that the price is too high.
 
-所以平台商品要适当加价:
+So the platform commodity to appropriate price increase: the original price of 15 yuan, the goods.
 
-原价15元的商品,合理加价应该是:原价+满减+会员活动+餐盒费+配送费,即15+15+4+1.5+5+1=41.5元。
+The original price of 15 yuan of goods, a reasonable price increase should be: the original price + full reduction + member activities + lunch box fee + delivery fee, that is, 15 + 15 + 4 + 1.5 + 5 + 1 = 41.5 yuan.
 
-大致如此,附近区域可以适当减免配送费。
+Roughly so, the neighborhood can be appropriate to reduce the delivery fee.
 
-校园区有自带骑手可以不收取配送费,其他地方多加2块即可。
+Campus area has its own rider can not charge delivery fee, other places can add 2 dollars more.
 
-这样消费者实际支付与堂食差不多,我们也能得到平台补贴。
+This way, consumers actually pay about the same as dine-in, we can also get the platform subsidies.
 
-正常来说还能多出3块左右,这样我们就可以继续做其他自营销活动,比如:新客立减可以设置1元;收藏店铺送1元;免除配送费1元。
+Normal can be more than about 3 yuan, so we can continue to do other self-marketing activities, such as: new customers can be set to 1 yuan; collection of stores to send 1 yuan; exempt delivery fee of 1 yuan.
 
-这样初步的营销活动就完成了。
+This preliminary marketing activities are completed.
 
-#### 爆品营销
+#### explosive marketing
 
-爆款就是一款店里的招牌产品,比如蜜雪冰城的柠檬水,这款经济实惠的饮品迅速提升了店面的客流量。一杯4块钱的柠檬水深受学生欢迎,虽利润不高,但带动了人流量,也带动了其他高利润饮品的销售。
+Explosive is a store's signature products, such as honey snow ice city of lemonade, this affordable drinks quickly enhance the store's customer traffic. A cup of 4 yuan of lemonade popular among students, although the profits are not high, but drove the flow of people, but also drove the sales of other high-profit drinks.
 
-相信一句话:只要有人进店消费,你就不可能不赚钱。我们也可以模仿这种模式,无论是堂食还是外卖都适用。
+Believe a sentence: as long as someone into the store to consume, you can not not make money. We can also imitate this model, whether it is dine-in or takeaway are applicable.
 
-细心的人可能会发现,我定价烤猪蹄和烤肘子的标准不太一样。
+Careful people may find that I priced the roasted pig's feet and roasted elbows not the same standard.
 
-它们的成本会有1-2块的差别,猪蹄的进价会比肘子贵一些,但我把肘子定价为15一份,利润会稍微减少,但可以带动其他产品的销售,外卖也是一样。
+Their costs will have a 1-2 dollar difference, pig's feet will be more expensive than the elbow, but I priced the elbow for 15 a, profits will be slightly reduced, but can lead to the sale of other products, takeout is the same.
 
-按这个价格算,两份肘子是30元。我们可以在外卖做一个大份烤肘子套餐,加上馒头、小菜、饮料。外卖可以定在40元以上,然后设定一个折扣优惠。大份烤肘子套餐折扣价约28.8元,顾客使用优惠券后实付约22元。我们实际收入约26元(这是针对学生的价位,小区要适当加配送费)。这样人均价格就很明确了。
+At this price, two elbows is 30 yuan. We can do a large roasted elbow package in the takeaway, plus steamed buns, small dishes, drinks. Takeout can be set at 40 yuan or more, and then set a discount offer. Large roasted elbow package discount price of about 28.8 yuan, customers use coupons to pay about 22 yuan. Our actual income of about 26 yuan (this is the price for students, the community should be appropriate to add delivery costs). The price per person is clear.
 
-问题是,一份大份烤肘子卖26元还赚钱吗?
+The question is, a large roasted elbow sold 26 yuan still make money?
 
-赚的,大份量控制在堂食两份的七八分满。这样的成本在16-17元,加上馒头、饮品、打包盒,总成本约20元。所以这个爆款单品我可以赚5-8元。可以用这样的模式,做几个外卖折扣套餐。 
+Earnings, large portion control in the dine-in two copies of the seven or eight full. The cost of such a 16-17 yuan, plus steamed buns, drinks, packing boxes, the total cost of about 20 yuan. So this pop single product I can earn 5-8 dollars. You can use this model, do a few takeaway discount packages. 
 
-注意：
+Note:
 
-1. 高成本商品不要轻易做,比如烤猪蹄,应该根据成本定合理价格,保证至少40%的利润。
-2. 外卖和堂食价格不要让消费者觉得外卖更实惠,许多学生有时间会到店里消费。要让他们觉得到店消费对我们更划算!只在外卖上做1-2种优惠引流商品。
-3. 外卖价格不合理要及时调整,活动到期及时延长。
-4. 好评差评要及时回复。关注每日曝光数据和下单转化率,正常情况下,新客和老客各占50%。 
+1. high-cost goods do not easily do, such as roasted pig's feet, should be based on the cost of a reasonable price, to ensure that at least 40% of the profit.
+2. takeaway and dine-in prices do not let consumers feel that takeaway more affordable, many students will have time to spend in the store. To let them feel to the store consumption for us more cost-effective! Only do 1-2 kinds of discounts on takeout to attract traffic goods. 3.
+3. Takeaway prices are unreasonable to adjust in time, the activities of the expiration of the timely extension. 4.
+4. good comments and bad comments to respond in a timely manner. Concerned about the daily exposure data and order conversion rate, under normal circumstances, new customers and regular customers account for 50%. 
 
-## 总结
 
-我做餐饮有些年头了,经历过大大小小的店铺。按现在的社会形态,最好是小额投资,别一开始就投入几十万,风险太大,封城几个月就吃不消房租。而且经济不好,消费市场份额相对缩小。
 
-研发单品爆款更容易生存,因为无论店租、人工、消耗品、进货都大大减少。操作流程也较简单,可以量化和细化,不需要太多专业人士,用心的人都能把它做好,这大大提高了第二家店的管理和运营。
+## Summary
 
-做餐饮,大品牌小品牌,核心是产品,其次是营销。要时常站在客户角度审视自己,哪里还有做得不足的地方。
+I do catering for some years, experienced large and small stores. According to the current social pattern, it is best to invest a small amount of money, do not start to invest hundreds of thousands of dollars, the risk is too great, closed to the city for a few months will not be able to eat the rent. And the economy is not good, the consumer market share is relatively small.
 
-选择开店就要有耐心把它经营好,生意不是一朝一夕。我这家店一个月刚开始只赚三千块,坚持做了一年后才开始转好,单月营业额最高达十万。按40%计毛利,那月我获得四万多收入。我请了两个员工,一个底薪2500加20%提成,另一个底薪4000,剩下还有两万多都是我的。这是后话了,前期必须自己全力经营。店做起来再考虑发展第二家。
+R & D single product explosion is easier to survive, because whether the store rent, labor, consumables, goods are greatly reduced. Operation process is also simpler, can be quantified and refined, do not need too many professionals, people can do it well, which greatly improves the management and operation of the second store.
 
-我也是农村出来,16岁开始打工,每年没存到什么钱,青春都卖给别人了,我不服。后来自己摆摊赚了钱才开店。我想说,只要有信心勇气,没有钱没有背景也要一步步来,十年打工也是卖青春,不如年轻时就拼搏一把。
+Do catering, big brand small brand, the core is the product, followed by marketing. To stand in the customer's point of view from time to time to examine their own, where there is not enough to do.
+
+Choose to open a store should have the patience to run it well, business is not overnight. My store started to earn only three thousand dollars a month, insisted on doing a year before the turnaround, the highest monthly turnover of 100,000 yuan. According to 40% gross profit, I earned more than 40,000 yuan that month. I hired two employees, a base salary of 2,500 plus 20% commission, another base salary of 4,000, the remaining 20,000 are mine. This is a later story, the first must be fully run by themselves. Store to do up and then consider the development of the second.
+
+I am also out of the countryside, 16 years old began to work, did not save any money each year, youth are sold to others, I am not convinced. Later, I set up my own stall and made money before opening my own store. I want to say, as long as you have the confidence and courage, no money, no background, but also step by step, ten years of working is also selling youth, it is better to work hard when you are young.
+
